# rust-training

./: Cargo.toml  rust-toolchain.toml
src/mandel_multi_thread/: main.rs
src/mandel_pure/: main.rs
src/quickreplace/: main.rs
